Added repl editor

--- a/stylesheets/replstylesheet.css
+++ b/stylesheets/replstylesheet.css
@@ -159,10 +159,12 @@ img {
   -ms-box-shadow: 0 0 5px #ebebeb;
 }
 
-pre, code {
+pre {
   width: 100%;
   color: #222;
+  /*
   background-color: #fff;
+  */
 
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 14px;
@@ -174,11 +176,21 @@ pre, code {
 
 
 }
+code {
+  width: 100%;
+  color: #222;
+  background-color: #fff;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  font-size: 14px;
+  border-radius: 2px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+}
 
 pre {
   width: 100%;
-  padding: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
+  /*padding: 10px;*/
+  box-shadow: 0 0 0px rgba(0,0,0,.1);
   overflow: auto;
 }
 
@@ -430,4 +442,3 @@ Small Device Styles
   }
 
 }
-
