--- a/stylesheets/replstylesheet.css
+++ b/stylesheets/replstylesheet.css
@@ -322,6 +322,7 @@ Full-Width Styles
 }
 
 #header_wrap {
+  height:5%;
   background: #212121;
   background: -moz-linear-gradient(top, #373737, #212121);
   background: -webkit-linear-gradient(top, #373737, #212121);
@@ -331,7 +332,7 @@ Full-Width Styles
 }
 
 #header_wrap .inner {
-  padding: 50px 10px 30px 10px;
+  padding: 0px 0px 0px 0px;
 }
 
 #project_title {
